// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betListItemComponent rendering Should not render a bet if the filter doesn't exist 1`] = `null`;

exports[`betListItemComponent rendering android Should render a bet with the description closed and its category icon on android 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffbcbc",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 100,
          "justifyContent": "center",
          "margin": 10,
          "width": 300,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#333333",
          "margin": 20,
        }
      }
    >
      TouchableNativeFeedback is not supported on this platform!
    </Text>
  </View>
</View>
`;

exports[`betListItemComponent rendering android Should render a bet with the description closed and no category icon on android 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffbcbc",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 100,
          "justifyContent": "center",
          "margin": 10,
          "width": 300,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#333333",
          "margin": 20,
        }
      }
    >
      TouchableNativeFeedback is not supported on this platform!
    </Text>
  </View>
</View>
`;

exports[`betListItemComponent rendering ios Should render a bet with the description closed and its category icon on ios 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF7F",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginHorizontal": 35,
          "marginTop": 25,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "[object Object]images/categories/sport.png",
          }
        }
        style={
          Object {
            "height": 40,
            "marginHorizontal": 10,
            "marginVertical": 10,
            "width": 40,
          }
        }
      />
      <Text
        style={
          Object {
            "flex": 1,
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Loripsum
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/bet_closed.png",
          }
        }
        style={
          Object {
            "height": 10,
            "marginHorizontal": 10,
            "width": 17,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`betListItemComponent rendering ios Should render a bet with the description closed and no category icon on ios 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF7F",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginHorizontal": 35,
          "marginTop": 25,
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Loripsum
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/bet_closed.png",
          }
        }
        style={
          Object {
            "height": 10,
            "marginHorizontal": 10,
            "width": 17,
          }
        }
      />
    </View>
  </View>
</View>
`;
